Added functionality to the caluculator and all operations now perform as expected

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <button class="operation">-</button>
       <button class="buttondecimal">.</button>
       <button class="digit">0</button>
-      <button class="equalButton">=</button>
+      <button class="equalBtn">=</button>
       <button class="operation">+</button>
     </div>
   </div>
