--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
       <button class="digit">2</button>
       <button class="digit">3</button>
       <button class="operation">-</button>
-      <button class="buttondecimal">.</button>
+      <button class="digit">.</button>
       <button class="digit">0</button>
       <button class="equalBtn">=</button>
       <button class="operation">+</button>
     </div>
   </div>
-
-
 </body>
 
 </html>
